// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validation Errors import - false (boolean): errors 1`] = `Array []`;

exports[`Validation Errors import - false (boolean): warnings 1`] = `Array []`;

exports[`Validation Errors import - true (boolean): errors 1`] = `Array []`;

exports[`Validation Errors import - true (boolean): warnings 1`] = `Array []`;

exports[`Validation Errors import - true (string): errors 1`] = `
Array [
  [ModuleBuildError: Module build failed (from /home/evilebottnawi/IdeaProjects/css-loader/src/index.js):
CSS Loader

  [4mOptions Validation Error[24m

  [2moptions[22m.import  [34mshould be boolean[39m


  [2moptions[22m.import  [34mshould be boolean[39m
    at validate (/home/evilebottnawi/IdeaProjects/css-loader/node_modules/@webpack-contrib/schema-utils/dist/validate-options.js:87:15)
    at validator (/home/evilebottnawi/IdeaProjects/css-loader/node_modules/@webpack-contrib/schema-utils/dist/validate-options.js:118:10)
    at Object.loader (/home/evilebottnawi/IdeaProjects/css-loader/src/index.js:29:3)],
]
`;

exports[`Validation Errors import - true (string): warnings 1`] = `Array []`;

exports[`Validation Errors importLoaders - 0 (number): errors 1`] = `Array []`;

exports[`Validation Errors importLoaders - 0 (number): warnings 1`] = `Array []`;

exports[`Validation Errors importLoaders - 1 (number): errors 1`] = `Array []`;

exports[`Validation Errors importLoaders - 1 (number): warnings 1`] = `Array []`;

exports[`Validation Errors importLoaders - 1 (string): errors 1`] = `
Array [
  [ModuleBuildError: Module build failed (from /home/evilebottnawi/IdeaProjects/css-loader/src/index.js):
CSS Loader

  [4mOptions Validation Error[24m

  [2moptions[22m.importLoaders  [34mshould be number[39m


  [2moptions[22m.importLoaders  [34mshould be number[39m
    at validate (/home/evilebottnawi/IdeaProjects/css-loader/node_modules/@webpack-contrib/schema-utils/dist/validate-options.js:87:15)
    at validator (/home/evilebottnawi/IdeaProjects/css-loader/node_modules/@webpack-contrib/schema-utils/dist/validate-options.js:118:10)
    at Object.loader (/home/evilebottnawi/IdeaProjects/css-loader/src/index.js:29:3)],
]
`;

exports[`Validation Errors importLoaders - 1 (string): warnings 1`] = `Array []`;

exports[`Validation Errors sourceMap - false (boolean): errors 1`] = `Array []`;

exports[`Validation Errors sourceMap - false (boolean): warnings 1`] = `Array []`;

exports[`Validation Errors sourceMap - true (boolean): errors 1`] = `Array []`;

exports[`Validation Errors sourceMap - true (boolean): warnings 1`] = `Array []`;

exports[`Validation Errors sourceMap - true (string): errors 1`] = `
Array [
  [ModuleBuildError: Module build failed (from /home/evilebottnawi/IdeaProjects/css-loader/src/index.js):
CSS Loader

  [4mOptions Validation Error[24m

  [2moptions[22m.sourceMap  [34mshould be boolean[39m


  [2moptions[22m.sourceMap  [34mshould be boolean[39m
    at validate (/home/evilebottnawi/IdeaProjects/css-loader/node_modules/@webpack-contrib/schema-utils/dist/validate-options.js:87:15)
    at validator (/home/evilebottnawi/IdeaProjects/css-loader/node_modules/@webpack-contrib/schema-utils/dist/validate-options.js:118:10)
    at Object.loader (/home/evilebottnawi/IdeaProjects/css-loader/src/index.js:29:3)],
]
`;

exports[`Validation Errors sourceMap - true (string): warnings 1`] = `Array []`;

exports[`Validation Errors unknown option: errors 1`] = `
Array [
  [ModuleBuildError: Module build failed (from /home/evilebottnawi/IdeaProjects/css-loader/src/index.js):
CSS Loader

  [4mOptions Validation Error[24m

  [2moptions[22m['unknow']  [34mis an invalid additional property[39m


  [2moptions[22m['unknow']  [34mis an invalid additional property[39m
    at validate (/home/evilebottnawi/IdeaProjects/css-loader/node_modules/@webpack-contrib/schema-utils/dist/validate-options.js:87:15)
    at validator (/home/evilebottnawi/IdeaProjects/css-loader/node_modules/@webpack-contrib/schema-utils/dist/validate-options.js:118:10)
    at Object.loader (/home/evilebottnawi/IdeaProjects/css-loader/src/index.js:29:3)],
]
`;

exports[`Validation Errors unknown option: warnings 1`] = `Array []`;

exports[`Validation Errors url - false (boolean): errors 1`] = `Array []`;

exports[`Validation Errors url - false (boolean): warnings 1`] = `Array []`;

exports[`Validation Errors url - true (boolean): errors 1`] = `Array []`;

exports[`Validation Errors url - true (boolean): warnings 1`] = `Array []`;

exports[`Validation Errors url - true (string): errors 1`] = `
Array [
  [ModuleBuildError: Module build failed (from /home/evilebottnawi/IdeaProjects/css-loader/src/index.js):
CSS Loader

  [4mOptions Validation Error[24m

  [2moptions[22m.url  [34mshould be boolean[39m


  [2moptions[22m.url  [34mshould be boolean[39m
    at validate (/home/evilebottnawi/IdeaProjects/css-loader/node_modules/@webpack-contrib/schema-utils/dist/validate-options.js:87:15)
    at validator (/home/evilebottnawi/IdeaProjects/css-loader/node_modules/@webpack-contrib/schema-utils/dist/validate-options.js:118:10)
    at Object.loader (/home/evilebottnawi/IdeaProjects/css-loader/src/index.js:29:3)],
]
`;

exports[`Validation Errors url - true (string): warnings 1`] = `Array []`;
